--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
-.env 
+# Python
+__pycache__/
+*.pyc
+
+# Virtual environment
+venv/
+backend/venv/
+
+# Env files
+.env
+
+# OS
+.DS_Store
+Thumbs.db
